# orion-monitoring

./: CMakeLists.txt  README.md  aws_client_helper.cc  aws_client_helper.h  cloud_watch_client.cc  cloud_watch_client.h  date.h  image_sim_monitor.cc  image_sim_monitor.h  main.cc  package_installer.sh  prepare_config.py  run_single.sh  service_monitor.cc  service_monitor.h  sonar-project.properties  temp_monitor.cc  temp_monitor.h  util.cc  util.h
cmake/: dependencies.cmake  set_ifndef.cmake
comparison/: README.md  ab_comparison.py  compare.py  event_loader.py  util.py  validation.py  variables.py
orion-monitoring_version_arm64/DEBIAN/: control  postinst  preinst
orion-monitoring_version_arm64/etc/systemd/system/: orion-monitoring.service
parser/: compare.py  generate_pdf.py  load_events.py  model.py  readme.md  recogtime.py  run.py  run_ab_testing.sh  run_batch_analysis.sh
video_sync/: create_copies.sh  devices.json  video_sync.sh
